# ChangeLog for dev-python/axiom
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/axiom/ChangeLog,v 1.37 2011/03/04 20:59:15 xarthisius Exp $

  04 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> axiom-0.6.0.ebuild:
  ppc64 stable wrt #354797

  04 Mar 2011; Michael Weber <xmw@gentoo.org> axiom-0.6.0.ebuild:
  ppc stable (bug 354797)

  26 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> axiom-0.6.0.ebuild:
  add ~ppc wrt #348984

  16 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  axiom-0.6.0.ebuild:
  Restrict Jython ABIs.

  16 Jan 2011; Raúl Porcel <armin76@gentoo.org> axiom-0.6.0.ebuild:
  sparc stable

  07 Jan 2011; Michael Weber <xmw@gentoo.org> axiom-0.6.0.ebuild:
  added ~sparc keyword (bug 311825)

  10 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  axiom-0.6.0.ebuild:
  Update EAPI. Fix dependencies. Don't inherit distutils.eclass and
  python.eclass twice. Use PyPI mirrors. Set PYTHON_MODNAME. Set
  TWISTED_PLUGINS and avoid custom regeneration of Twisted plugin cache
  (bug #329313).

  12 Aug 2010; Markus Meier <maekke@gentoo.org> axiom-0.6.0.ebuild:
  amd64/x86 stable, bug #330773

*axiom-0.6.0 (30 Nov 2009)

  30 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +axiom-0.6.0.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS.

  06 Sep 2009; Christian Ruppert <idl0r@gentoo.org>
  -files/axiom-0.5.20-sqlite3.patch, -files/axiom-0.5.27-sqlite3.patch:
  Remove unused patches.

  05 Sep 2009; Patrick Lauer <patrick@gentoo.org> -axiom-0.5.30.ebuild:
  Remove old

*axiom-0.5.31 (06 Jun 2009)

  06 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +axiom-0.5.31.ebuild:
  Version bump.

  01 Jun 2009; Patrick Lauer <patrick@gentoo.org> axiom-0.5.30.ebuild:
  EAPI goes to the top

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org> -axiom-0.5.27.ebuild:
  Remove old
