@@ -4,6 +4,6 @@ AUX scientificpython-2.9.1-mpi-netcdf.patch 1367 RMD160 af8df4a50d2e3a9895d29797
 DIST ScientificPython-2.9.1.tar.gz 595239 RMD160 d2c1822cd4ec0b42588f90fa2551d109f462f43b SHA1 595f62133d6a013e4298e7c4e80e755ad971fe89 SHA256 b45305b03d8238fe1be74d6bbd5541d452d9705ab15069dcd506d38e137e9c5c
 DIST ScientificPython-2.9.tar.gz 593720 RMD160 2533879b64fcb17027b11784fc0cff4351284c98 SHA1 60fb1ec7c31c86b7e7a068ccda780197e1e95ad8 SHA256 4ffc33f211b9dc811af0aa82b74453f73c7f415c04352ac1cef92b95b12b74be
 EBUILD scientificpython-2.9-r1.ebuild 2211 RMD160 62d09d11a16f2ef90a9a5ec82846cbf626e6537d SHA1 e912b381b6d622c4182dbc44ca1bacf6dd824f13 SHA256 b4ab5d7512df35d8c9fe4dc2fe3d80f4caf6d85ffcb54b131295a57d69e2e8d7
-EBUILD scientificpython-2.9.1.ebuild 2309 RMD160 a25d2b2de423b4a69c605c2d9da5f9e6636204f6 SHA1 768f47b312cc214cc46e7fe2ba4744365df62242 SHA256 c894026bd2ca1c8c2bf576d59ecd613705766b9a3e17f730bc4e4296aa6c974a
-MISC ChangeLog 7577 RMD160 fcc2b305f85f75cc4f7e02c28021f9f995153375 SHA1 7c52ee6336abd7a73f664eccf4ee33a4e398cf67 SHA256 9d11d79d038351d3c47e1d04e707a3ce3114615893d3fd3e149397dc66ce31c2
+EBUILD scientificpython-2.9.1.ebuild 2305 RMD160 d18eb0feee8a87da5b3f60ca8a44857c42cd02b5 SHA1 630082c031b03ac842c6f6b57e368066f5ed2e55 SHA256 009009cbabe465f994cd33395af219abcf2d0a1037fcb9b6f01ac26107121072
+MISC ChangeLog 7680 RMD160 1840c258f31c80ab166422b7d005064a441b41c9 SHA1 40cf0157406e56e9cb004361237b06813faefc83 SHA256 87044337223b4b4b5d1c0ac161d1d83d49944f05154dd164f0d156d0bfc454d9
 MISC metadata.xml 734 RMD160 47baa4ca9756eff5e19c8f7b18f18054d5c3e1aa SHA1 aa3adb4221bc8997d68d01afa2ca8528ab579baf SHA256 6749ecfd7ae3f2ed8e9da27ad372d9f35023cdf3ea7ab0976b829460b1d03b2f
